test_fixtures/while/fun_in_body.lox
// ParserError: UnexpectedExpressionToken found Fun from l2c14 to l2c17
while (true) fun foo() {}
